# Smart-ERP

./: .env.example  .gitignore  404.html  DOCKER_GUIDE.md  Dockerfile.backend  IMPLEMENTATION_SUMMARY.md  OPENBSD_INSTALL.md  README.md  RUST_IMPLEMENTATION_SUMMARY.md  SETUP.md  TODO.md  check_health.py  chroot_deploy.sh  create_test_data.py  docker-compose.new.yml  docker-compose.prod.yml  docker-compose.yml  index.html  index.txt  install_openbsd.sh  openbsd_deploy_appliance.sh  openbsd_rc.d_smarterp  publish_release.sh  requirements.txt  restart-docker.bat  restart-docker.sh  setup-gcp-workload-identity.sh  test_login_direct.py
.github/workflows/: deploy-api.yml  deploy-frontend.yml  seed-database.yml  test-auth.yml
404/: index.html
accounting/: models.py  serializers.py  views.py
accounting/migrations/: 0001_initial.py  0002_initial.py  0003_alter_invoice_status_payment.py
backend/: Cargo.toml  Dockerfile.backend
backend/api/: Cargo.toml
backend/api/src/: error.rs  main.rs  state.rs
backend/api/src/handlers/: accounting.rs  auth.rs  chart_of_accounts.rs  employee.rs  inventory.rs  manufacturing.rs  mod.rs  purchasing.rs  reports.rs  sales.rs  transactions.rs
backend/api/src/middleware/: auth.rs
backend/core/: Cargo.toml
backend/core/src/: error.rs
backend/core/src/models/: accounting.rs  auth.rs  chart_of_accounts.rs  employee.rs  inventory.rs  manufacturing.rs  mod.rs  product.rs  purchasing.rs  reports.rs  sales.rs  transactions.rs
backend/core/src/models/analytics/: mod.rs
backend/infrastructure/: Cargo.toml
backend/infrastructure/src/db/: accounting.rs  auth.rs  chart_of_accounts.rs  employee.rs  inventory.rs  manufacturing.rs  mod.rs  product.rs  purchasing.rs  reports.rs  sales.rs  transactions.rs
backend/migrations/: 20240211000001_initial_schema.sql  20240211000002_purchasing_schema.sql  20240211000003_manufacturing_schema.sql  20240211000004_sales_accounting_schema.sql  20240211000005_auth_and_enhancements.sql  20240522000000_initial_schema.sql  20240601000001_phase1_accounts_employees.sql  20240602000001_phase2_transactions.sql  seed_data.sql  seed_demo_data.sql  seed_showcase.sql
backend/shared/: Cargo.toml
backend/shared/src/: error.rs
core/: mixins.py  models.py  serializers.py  views.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
purchases/: models.py  serializers.py  views.py
raw_leather/: apps.py  models.py  serializers.py  views.py
sales/: models.py  serializers.py  views.py
smart/: asgi.py  settings.py  urls.py  wsgi.py
tenants/: models.py  serializers.py  views.py
web-client/: Dockerfile.frontend  index.html  next.config.js  nginx.conf  package.json  seed_db.js  tsconfig.json
(+103 files in other folders)
