[workspace]
members = [
    "api",
    "core",
    "infrastructure",
    "shared",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "rust_decimal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-with-str", "db-postgres"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
dotenvy = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9.2"
rand = "0.8"
