[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
smart_erp_core = { path = "../core" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }

[target.'cfg(target_os = "openbsd")'.dependencies]
pledge = "0.4.2"
unveil = "0.3.0"
