[package]
name = "smart_erp_core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
