[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
smart_erp_core = { path = "../core" }
shared = { path = "../shared" }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
